# snippets

./: configure.ac
