m4_include([version.m4])
AC_PREREQ([2.63])

AC_INIT([snippets], [VERSION_NUMBER])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign silent-rules -Werror -Wall])
AM_MAINTAINER_MODE([enable])

AS_SHELL_SANITIZE

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
